--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@next/font": "13.1.1",
+    "@popperjs/core": "^2.6.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "bootstrap": "5.0.0-beta2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "feather-icons": "^4.28.0",
+    "is_js": "^0.9.0",
     "next": "13.1.1",
+    "plyr": "^3.6.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.57.1",
-    "typescript": "4.9.4",
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "@popperjs/core": "^2.6.0",
-    "bootstrap": "5.0.0-beta2",
-    "feather-icons": "^4.28.0",
-    "is_js": "^0.9.0",
-    "plyr": "^3.6.4"
+    "swiper": "^9.1.0",
+    "typescript": "4.9.4"
   }
 }
